--- a/environment.yaml
+++ b/environment.yaml
@@ -1,4 +1,4 @@
-name: template
+name: pkg
 channels:
   - conda-forge
   - defaults
@@ -8,4 +8,3 @@ dependencies:
   - flake8
   - pre-commit
   - pytest
-  
