--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -22,7 +22,7 @@ jobs:
       - name: Install Dependencies
         run: |
           pip install --upgrade pip
-          pip install -r requirements/requirements.txt
+          pip install -r requirements.txt
           pip install pytest-github-actions-annotate-failures
 
       - name: PyTest with code coverage
