--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,26 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Node paths
+# dependencies
+pkg_client/node_modules
+pkg_client/.pnp
+.pnp.js
+
+# testing
+pkg_client/coverage
+
+# production
+pkg_client/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
