--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,6 @@ rdflib==6.3.2
 pytest-cov
 Flask>=2.3.3
 Flask-RESTful>=0.3.10
-python-graphviz
-pydotplus
-IPython
+python-graphviz==0.20.1
+pydotplus==2.0.2
+ipython==8.19.0
