--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,6 +32,7 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install -r requirements.txt
+          conda install graphviz
 
       - name: Run black
         shell: bash
