--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,7 +32,10 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install -r requirements.txt
-          conda install graphviz
+      
+      - name: Install graphviz
+        run: |
+          sudo apt install graphviz
 
       - name: Run black
         shell: bash
