--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,8 +34,9 @@ jobs:
           pip install -r requirements.txt
       
       - name: Install graphviz
-        run: |
-          sudo apt install graphviz
+        uses: awalsh128/cache-apt-pkgs-action@latest
+        with:
+          packages: graphviz
 
       - name: Run black
         shell: bash
