--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,10 +32,18 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install -r requirements.txt
-      
-      - uses: actions/checkout@v3
-      - name: Setup Graphviz
-        uses: ts-graphviz/setup-graphviz@v1
+
+      - name: Download and install Graphviz
+        run: |
+          wget https://gitlab.com/api/v4/projects/4207231/packages/generic/graphviz-releases/9.0.0/graphviz-9.0.0.tar.gz
+          tar -xzvf garphviz-9.0.0.tar.gz
+          cd graphviz-9.0.0
+          sudo apt-get update
+          sudo apt-get install -y build-essential libexpat1-dev libexpat1
+          ./configure
+          make
+          sudo make install
+          dot -V
 
       - name: Run black
         shell: bash
