--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Download and install Graphviz
         run: |
           wget https://gitlab.com/api/v4/projects/4207231/packages/generic/graphviz-releases/9.0.0/graphviz-9.0.0.tar.gz
-          tar -xzvf garphviz-9.0.0.tar.gz
+          tar -xzvf graphviz-9.0.0.tar.gz
           cd graphviz-9.0.0
           sudo apt-get update
           sudo apt-get install -y build-essential libexpat1-dev libexpat1
