--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -104,6 +104,10 @@ jobs:
           pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest-github-actions-annotate-failures
+      
+      - name: Install graphviz
+        uses: tlylt/install-graphviz@v1
+
     
       - name: PyTest with code coverage
         continue-on-error: true
