--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -24,6 +24,9 @@ jobs:
           pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest-github-actions-annotate-failures
+        
+      - name: Install Graphviz
+        uses: tlylt/install-graphviz@v1
 
       - name: PyTest with code coverage
         continue-on-error: true
