Pipline for NL to KG
* Pipline for NL to KG
Fixes #78

* pre-commit

* generalize Prompt class

* implemented simple nl to pkg (no entity linking)

* Add tests

* Run pre-commit

* Addressing review comments

* docformater

* Change Concept fields to lists

* fix triple.object type

* Merge branch 'main' of https://github.com/iai-group/pkg-api into feature/78-Pipline-for-NL-to-KG

* Change method signature to entity linker

* Fix tests involving entity linker

* Address review comments

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ black
 flake8
 pytest
 pytest-cov
+pytest-mock
 mypy
 docformatter
 pre-commit
@@ -12,3 +13,5 @@ pytest-cov
 Flask>=2.3.3
 Flask-RESTful>=0.3.10
 Flask-SQLAlchemy>=3.1.1
+requests
+types-requests
