--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -74,7 +74,7 @@ jobs:
 
   build-and-test:
     name: "Build and Test Python 3.9"
-    runs-on: [self-hosted, uisdesktop]
+    runs-on: [self-hosted]
     if: always()
     strategy:
       max-parallel: 5
