--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -86,6 +86,8 @@ jobs:
         with:
           python-version: 3.9
           cache: "pip"
+          cache-dependency-path: |
+            requirements.txt
 
       - name: Install Dependencies
         run: |
