--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -84,11 +84,11 @@ jobs:
       - name: Cache Python packages
         uses: actions/cache@v2
         with:
-          path: ~/.cache/pip
+          path: /tmp/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
-        timeout-minutes: 10 
+        timeout-minutes: 15
       - name: Set up Python 3.9
         uses: actions/setup-python@v4
         with:
