Feature/82-NLtoAPI-Implement-basic-entity-linker
* Simplify Triple (Only use Concept instead of Union[str, Concept])
Fixes #87

* [NLtoAPI] Implement basic entity linker
Fixes #82

* Update tests

* Update tests to use Concept

* simplify checks in get_preference

* simplify check for existance of object in triple

* Merge branch 'feature/87-Simplify-Triple-Only-use-Concept-instead-of-Unionstr-Concept' of https://github.com/iai-group/pkg-api into feature/82-NLtoAPI-Implement-basic-entity-linker

* Add tests

* Add TripleElement class for SPO

* Merge branch 'feature/87-Simplify-Triple-Only-use-Concept-instead-of-Unionstr-Concept' of https://github.com/iai-group/pkg-api into feature/82-NLtoAPI-Implement-basic-entity-linker

* Migrate to new dataclass structure

* Add linking for predicate and object

* Address review comments

* Merge branch 'main' of https://github.com/iai-group/pkg-api into feature/87-Simplify-Triple-Only-use-Concept-instead-of-Unionstr-Concept

* fix imports

* Fix pkg inserts with new dataclass structure

* [NLtoAPI] Implement basic entity linker
Fixes #82

* Merge branch 'main' of https://github.com/iai-group/pkg-api into feature/82-NLtoAPI-Implement-basic-entity-linker

* Swap value and reference

* Merge branch 'main' of https://github.com/iai-group/pkg-api into feature/82-NLtoAPI-Implement-basic-entity-linker

* Address review comments

* Address review comments

* format docstrings

* Add file docstrings

* Address review comments

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,9 @@ pytest-cov
 Flask>=2.3.3
 Flask-RESTful>=0.3.10
 Flask-SQLAlchemy>=3.1.1
+requests
+types-requests
+pyyaml
+types-pyyaml
 ollama
-types-PyYAML
 rfc3987
